<resources>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

<string name="app_name">IIT BBS</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">IIT BHUBANESWAR</string>
<string name="nav_header_subtitle">IIT BHUBANESWAR</string>
<string name="nav_header_desc">Navigation header</string>
<string name="nav_ambulance_Activity">Ambulance</string>
<string name="nav_bov_Activity">BOV service</string>

<string name="title_activity_main2">Main2Activity</string>
<string name="useful_links">Useful Websites and Facebook pages</string>

<string name="action_auto_service">Auto Service</string>

<string name="title_activity_home">HomeActivity</string>
<string name="dummy_button">Dummy Button</string>
<string name="dummy_content">DUMMY\nCONTENT</string>
<string name="contact">Useful Contacts</string>
<string name="action_hostelContacts">Hostel Office Contacts</string>

<string name="action_about">About</string>
<string name="action_contact_us">Contact us</string>
<string name="Contact_us">Developers</string>

<string name="academicCalender">Academic Calendar</string>

<string name="action_timetable">Time Table</string>
<string name="Time_Table">Time Table</string>
<string name="action_academic_calender">Academic Calender</string>
<string name="action_holidays_list">Holidays List</string>
<string name="action_curriculum">Curriculum</string>
<string name="action_ERP">ERP</string>
<string name="action_central_library">Central Library</string>

<string name="action_bus_schedule">Bus Schedule</string>
<string name="Bus_Schedule">Bus Schedule</string>
<string name="action_BOV">Battery Operated Vehicle</string>
<string name="action_ambulance">Ambulance</string>
<string name="action_Autos">Auto Service</string>
<string name="action_BOV_tariff">BOV Tariff</string>
<string name="Holidays_List">Holidays List</string>
<string name="holidays_list">Holidays List</string>

<string name="action_contacts">Contacts</string>

<string name="action_map">Campus Map</string>
<string name="lostfound">Lost and Found Desk</string>
<string name="action_mess_menu">Mess Menu</string>

<string name="action_useful_websites_and_pages">Useful websites and fb pages</string>
<string name="title_activity_contacts">contactsActivity</string>
<string name="action_lostfound">Lost and Found Desk</string>

<string name="title_home">Website</string>
<string name="title_dashboard">Reload</string>
    <string name="action_aboutapp">About</string>
<string name="title_notifications">ERP</string>
</resources>
